# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.636 2006/06/21 22:11:54 wolf31o2 Exp $

  21 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/netboot2_target.py, modules/stage1_target.py,
  targets/netboot2/netboot2-copyfile.sh, targets/support/pre-kmerge.sh:
  Added two patches from Joshua Kinard <kumba@gentoo.org> to fix stage1 not
  having /proc mounted during the preclean stage and also to clean up the
  netboot2 code. This is 2.0_rc48.

  20 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/unmerge.sh:
  Change our unmerge from being a single unmerge to a loop, to work around an
  unexpected change in portage 2.1's unmerge processing.

  19 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh:
  Fixed a problem where we were putting the kernel name in twice and causing
  and error when using grub as a bootloader. This is for bug #137252.

  15 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh:
  Added a second pass to the alpha bootloader setup to create aboot items for
  serial console for bug #133457.

  12 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +livecd/cdtar/arcload-0.43-r1.tbz2:
  Added arcload cdtar for mips.

  09 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/netboot/netboot-controller.sh:
  Added make-busybox-symlinks to USE for busybox compile. This is catalyst
  2.0_rc47.

  08 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py, targets/support/livecdfs-update.sh:
  Add patch from bug #135051 to fix the seedcache extraction logic.

  03 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Don't set icon theme to Clearlooks, since it doesn't exist.

  03 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh: