@@ -1,5 +1,11 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.636 2006/06/21 22:11:54 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.637 2006/06/22 11:43:34 wolf31o2 Exp $
+
+  22 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/support/unmerge.sh:
+  Removing loop for unmerge, as it didn't actually solve anything and the
+  portage team has helped us out by reverting the behavior that caused this
+  change in the first place.
 
   21 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
   modules/netboot2_target.py, modules/stage1_target.py,
